--- a/_config.yml
+++ b/_config.yml
@@ -7,16 +7,16 @@
 
 # Site settings
 host: 0.0.0.0
-title: Your awesome title
-email: your-email@domain.com
+title: Eddie Jaoude
+email: eddie@jaoudestudios.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://eddiejaoude.github.io"
+twitter_username: eddiejaoude
+github_username:  eddiejaoude
 
 # Build settings
 markdown: kramdown
