angular + tailwindcss + basic layout

--- a/angular.json
+++ b/angular.json
@@ -99,6 +99,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/tailwind.scss",
               "src/styles.scss"
             ],
             "scripts": []
